--- a/src/pages/garantia-reembolso.njk
+++ b/src/pages/garantia-reembolso.njk
@@ -7,5 +7,5 @@ eleventyNavigation:
   key: garantia-reembolso
 ---
 
-{% set pageData = legal.guaranteeRefund %}
+{% set pageData = site.legal.guaranteeRefund %}
 {% include "partials/legal-page.njk" %}
