--- a/src/pages/politica-privacidade.njk
+++ b/src/pages/politica-privacidade.njk
@@ -7,5 +7,5 @@ eleventyNavigation:
   key: politica-privacidade
 ---
 
-{% set pageData = legal.privacyPolicy %}
+{% set pageData = site.legal.privacyPolicy %}
 {% include "partials/legal-page.njk" %}
