--- a/src/pages/termos-condicoes.njk
+++ b/src/pages/termos-condicoes.njk
@@ -7,5 +7,5 @@ eleventyNavigation:
   key: termos-condicoes
 ---
 
-{% set pageData = legal.termsConditions %}
+{% set pageData = site.legal.termsConditions %}
 {% include "partials/legal-page.njk" %}
